# fridayfun

./: .gitignore  README.md  run.ps1
.github/: copilot-instructions.md
src/DebugHook/: CMakeLists.txt  DebugHook.cpp
src/DebugLoader/: DebugLoader.csproj  DumpAnalyzer.cs  Program.cs
src/TargetApp/: CMakeLists.txt  TargetApp.cpp
src/TargetAppMinimal/: TargetAppMinimal.c
src/TargetAppRust/: Cargo.toml
src/TargetAppRust/src/: main.rs
src/offensive-security/process-hollowing/: README.md  compile.bat  process_hollowing.cpp  process_hollowing.ps1  process_hollowing.py
