[package]
name = "target_app_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }

[profile.release]
opt-level = "z"       # optimize for size
lto = true            # link-time optimization
strip = true          # strip debug symbols
codegen-units = 1     # single codegen unit for better optimization
panic = "abort"       # no unwinding overhead
